Ensure that bottom alignment only happens on official page banner navigation

--- a/web/themes/custom/union_marketing/scss/components/_page-banner.scss
+++ b/web/themes/custom/union_marketing/scss/components/_page-banner.scss
@@ -107,7 +107,10 @@
   @include breakpoint(md) {
     display: flex;
     gap: var(--cu-ps2);
-    align-items: end;
+
+    &.cu-page-nav__list {
+      align-items: end;
+    }
   }
 
   li {
